OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3 (WordPress)

5.5.0 (2018-10-??)
------------------
Features:
- ALL: differentiate between invoice type 1 and 6 for countries having the same
  vat rate as NL:
  * Add vat class information as metadata.
  * Add method ShopCapabilities::getVatClasses().
  * Add setting foreignVatClasses (default, UI on config form).
  * Use setting foreignVatClasses and vat class meta data to select between vat
    type 1 and 6.
- ALL: Support for new roles and permissions to access the web server API.
- ALL: Added logging to execution stage of batch form.
- ALL: Make "property specification not found" a debug level message.
- JOO: Access rights revisited so that menu-items remain visible in the admin
  menu for people who only have access to the batch send form.
Bugs:
- WC3: Since WC3, the shipping tax class can be "inherited" from the product
  items (which should be the preferred value for this setting). The plugin did
  not handle this value correctly.
- WC3: Code to get the vat rate lookup meta data did not use customer location
  and would therefore be based on shop location.
- WC3: Code to improve precision of shipping costs ex vat ignores zone based
  shipping method settings of WC3.
- ALL: Warning: implode(): Invalid arguments passed in Completor.php on line 835.
- ALL: module specific translations were not loaded on case sensitive systems
  (e.g. linux).
- ALL: Warning 511: Incorrect vattype value used (false) in vattype tag as part
  of invoice section in the XML. Using default value of 1(national, regular
  invoice). (CE005BVTC)
- ALL: Message 'message_warning_no_vattype_must_split' was not translated.
- OC: Breadcrumb on settings page was incorrect.

5.4.9 (2018-10-03)
------------------
Features:
- JOO: Add access right to config, advanced config and batch screens.
Bugs: